--- a/blogilistasovellus-frontend/package.json
+++ b/blogilistasovellus-frontend/package.json
@@ -11,11 +11,14 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.4.0",
     "prettier": "^3.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.6",
